<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>com.kinde</groupId>
  <artifactId>kinde-parent-pom</artifactId>
  <version>2.0.0</version>
  <name>parent-project</name>
  <packaging>pom</packaging>
  <url>http://maven.apache.org</url>
  <dependencies>
    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>3.8.1</version>
      <scope>test</scope>
    </dependency>
  </dependencies>
  <modules>
    <module>kinde-core</module>
    <module>kinde-management</module>
    <module>kinde-j2ee</module>
    <module>kinde-springboot</module>
    <module>playground/kinde-core-example</module>
    <module>playground/kinde-management-example</module>
    <module>playground/kinde-j2ee-app</module>
    <module>playground/springboot-pkce-client-example</module>
  </modules>
  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.10.1</version> <!-- You can use the latest version -->
        <configuration>
          <source>17</source> <!-- Specify your desired Java version -->
          <target>17</target> <!-- Specify your desired Java version -->
        </configuration>
      </plugin>
    </plugins>
  </build>
</project>
